added logger aspect, refactored codestyle, extracted HnbApiCLient